classDiagram
direction LR

class Worker {
  +nip
  +name
  +department_id
  +shift_id
  +status
  +department()
  +shift()
  +workerShifts()
  +attendances()
  +shiftOverrides()
  +offDays()
  +activeWorkerShift()
  +getShiftForDate()
  +isOffDay()
  +canCheckOutOnDate()
}

class Shift {
  +name
  +start_time
  +end_time
  +total_hours
  +grace_period_minutes
  +is_overnight
  +is_active
  +workerShifts()
  +dayTimes()
  +shiftOverrides()
  +attendances()
  +getScheduleForDate()
}

class Attendance {
  +worker_id
  +shift_id
  +attendance_date
  +check_in
  +check_out
  +distance_check_in
  +distance_check_out
  +check_in_by_admin
  +check_out_by_admin
  +status
  +is_late
  +late_minutes
  +is_early_leave
  +early_leave_minutes
  +worker()
  +shift()
  +checkInAdmin()
  +checkOutAdmin()
  +photos()
  +checkInPhoto()
  +checkOutPhoto()
}

class WorkerShift {
  +worker_id
  +shift_id
  +effective_from
  +effective_until
  +is_active
  +notes
  +worker()
  +shift()
  +getShiftForDate()
  +isActiveOnDate()
}

class ShiftDayTime {
  +shift_id
  +day_of_week
  +start_time
  +end_time
  +shift()
}

class ShiftOverride {
  +worker_id
  +shift_id
  +override_date
  +reason
  +created_by
  +shift_swap_request_id
  +worker()
  +shift()
  +creator()
  +shiftSwapRequest()
}

class WorkerOffDay {
  +worker_id
  +day_of_week
  +effective_from
  +effective_until
  +reason
  +created_by
  +worker()
  +createdBy()
}

class AttendanceController {
  +index()
  +create()
  +checkInForm()
  +checkIn()
  +checkOutForm()
  +checkOut()
  +show()
  +edit()
  +update()
  +destroy()
  +dailyReport()
  +monthlyReport()
  +export()
  +history()
  +workerStats()
}

class WorkerShiftController {
  +index()
  +create()
  +generate()
  +generateStore()
  +store()
  +show()
  +edit()
  +update()
  +destroy()
  +workerShifts()
  +calendarData()
}

class ShiftOverrideController {
  +index()
  +create()
  +store()
  +bulkCreate()
  +destroy()
}

class WorkerOffDayController {
  +index()
  +storePattern()
  +destroyPattern()
  +checkDate()
  +getRange()
}

Worker --> Shift : belongsTo
Worker --> "*" Attendance : hasMany
Worker --> "*" WorkerShift : hasMany
Worker --> "*" ShiftOverride : hasMany
Worker --> "*" WorkerOffDay : hasMany
Shift --> "*" Attendance : hasMany
Shift --> "*" WorkerShift : hasMany
Shift --> "*" ShiftDayTime : hasMany
Shift --> "*" ShiftOverride : hasMany
WorkerShift --> Worker : belongsTo
WorkerShift --> Shift : belongsTo
ShiftDayTime --> Shift : belongsTo
ShiftOverride --> Worker : belongsTo
ShiftOverride --> Shift : belongsTo
WorkerOffDay --> Worker : belongsTo
AttendanceController ..> Attendance : uses
AttendanceController ..> Worker : uses
AttendanceController ..> Shift : uses
WorkerShiftController ..> WorkerShift : uses
WorkerShiftController ..> Worker : uses
WorkerShiftController ..> Shift : uses
ShiftOverrideController ..> ShiftOverride : uses
ShiftOverrideController ..> Worker : uses
WorkerOffDayController ..> WorkerOffDay : uses
WorkerOffDayController ..> Worker : uses
